[tool.poetry]
name = "show-love-by-math"
version = "0.1.0"
description = ""
authors = ["hms5232 <43672033+hms5232@users.noreply.github.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.23.0"
matplotlib = "^3.5.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
